# map_align

./: .gitignore  CMakeLists.txt  README.md  install.sh
notebooks/: 181002_mapalign_anal.Rmd  mapalign_anal_scratch.Rmd  mapalign_anal_scratch2.Rmd  normalize test.Rmd  normalize_test.Rmd
scripts/: mapaln_funs.R  misc.rmd
src/: PDB.cc  PDB.h  getmap.cc  mapalign.cc  misc.h  pdb_utils.cc  pdb_utils.h  tester.cc
test/: 1mfj_A.map  1mfk_A.map  2pd0_A.pdb.map  tester.cc
